Ports over grid fixes: size-auto plus alignment flex fixes

--- a/src/base/_grid.scss
+++ b/src/base/_grid.scss
@@ -14,14 +14,6 @@ html {
     flex-wrap: wrap;
   }
 
-  &.space-between {
-    justify-content: space-between;
-  }
-
-  &.space-around {
-    justify-content: space-around;
-  }
-
   &.center {
     justify-content: center;
   }
@@ -31,11 +23,11 @@ html {
   }
 
   &.align-top {
-    align-items: flex-top;
+    align-items: flex-start;
   }
 
   &.align-bottom {
-    align-items: flex-bottom;
+    align-items: flex-end;
   }
 }
 
@@ -81,6 +73,10 @@ html {
 }
 .size-stretch {
   flex-grow: 1;
+}
+.size-auto {
+  min-width: fit-content;
+  max-width: fit-content;
 }
 
 .hidden {
